syntax = "proto2";
package product_type;
option go_package = "etop.vn/api/pb/etop/etc/product_type";

import "gogoproto/gogo.proto";
option (gogoproto.gogoproto_import)         = false;

enum ProductType {
    unknown = 0;
    services = 1;
    goods = 2;
}
